<resources>
    <string name="app_name">AndroNews</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_interests">My Interests</string>
    <string name="title_notifications">Notifications</string>
    <string name="connection_error">Connection Error</string>
    <string name="error">An Error accurred</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="unknown_error">Unknown erorr</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_title_0">News of\n our time</string>
    <string name="splash_title_1">Your news your interests</string>
    <string name="splash_sub_title_0">Tailored for you</string>
    <string name="splash_sub_title_1">Get the latest information. about the most important news and topics for you</string>
    <string name="splash_continue">Continue</string>
    <string name="interests_watch_news">Which news do you want to see?</string>
    <string name="interests_pick_the_topics">Pick the topics that interest you</string>
    <string name="interests_btn_continue">Continue</string>
    <string name="sign_in_login_text">Login</string>
    <string name="sign_in_signin_to">Sign in to your account</string>
    <string name="fragment_sign_in_password">Password</string>
    <string name="fragment_sign_in_user_name">User name</string>
    <string name="fragment_sign_in_forgot_password">Forgot your password?</string>
    <string name="fragment_sign_in_login">Login</string>
    <string name="fragment_sign_in_or_sing_in_with">or sing in with</string>
    <string name="fragment_sign_up_or_sing_up_with">or sing up with</string>
    <string name="fragment_sign_in_dont_have_account">Don`t have an account?</string>
    <string name="fragment_sign_in_sign_up">Create</string>
    <string name="item_interests_title_following">Following</string>
    <string name="item_interests_title_follow">+ Follow</string>
    <string name="sign_up_register_text">Register</string>
    <string name="sign_up_fill_the"><![CDATA[Fill the details & create your account]]></string>
    <string name="fragment_sign_up_email">Email</string>
    <string name="fragment_sign_up_user_name">User Name</string>
    <string name="fragment_sign_up_password">Password</string>
    <string name="fragment_sign_up_register">Register</string>
    <string name="forgot_password_text">Forgot password</string>
    <string name="forgot_password_enter_the_email">Enter the email adress assaciated\nwith this account</string>
    <string name="forgot_password_send">Send</string>
    <string name="forgot_password_email">Email</string>
    <string name="already_registered">This email already registered</string>
    <string name="interests_name">World</string>
    <string name="drawer_nav_home">Home</string>
    <string name="drawer_nav_my_interests">My Interests</string>
    <string name="drawer_nav_save">Save</string>
    <string name="drawer_nav_settings">Settings</string>
    <string name="drawer_nav_category">Category</string>
    <string name="drawer_nav_premium">Premium</string>
    <string name="drawer_nav_privacy_policy">Privacy Policy</string>
    <string name="drawer_nav_about">About</string>
    <string name="bottom_nav_save">Save</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="bottom_nav_myinterests">My Interests</string>
    <string name="navigation_drawer_open">Manu open</string>
    <string name="navigation_drawer_close">Manu colse</string>
    <string name="banner_news_category_title">%s</string>
    <string name="news_category_title">%s</string>
    <string name="news_title">%s</string>
    <string name="news_add_time">%s</string>
    <string name="news_comment_count">%d</string>
    <string name="news_view_users">%d</string>
    <string name="error_text">An error accurred…</string>
    <string name="retry_text">Retry</string>
    <string name="banner_news_title">%s</string>
    <string name="banner_add_news_time">%s</string>
    <string name="banner_news_comment_count">%d</string>
    <string name="banner_news_views_count">%d</string>
    <string name="my_interests_text">My Interests</string>
    <string name="fragment_save_delete_history">Delete all</string>
    <string name="details_category_name">%s</string>
    <string name="details_news_title">%s</string>
    <string name="details_news_description">%s</string>
    <string name="details_news_add_time">%s</string>
    <string name="details_news_view_users">%d</string>
    <string name="search_input_hint">Search</string>
    <string name="search_news_title">Search news</string>
    <string name="Item_comments_title">%s</string>
    <string name="item_comments_count">%d</string>
    <string name="item_other_news_title">%s</string>
    <string name="item_other_news_category_name">%s</string>
    <string name="item_comments_comment_add_time">%s</string>
    <string name="item_comments_reply">Reply</string>
    <string name="item_comments_user_name">%s</string>
    <string name="item_comments_comment_title">%s</string>
    <string name="fragment_detail_all_comments">All comments</string>
    <string name="fragment_detail_leave_comment">Leave comment</string>
    <string name="fragment_comments_title">Comments</string>
    <string name="detail_share">Share</string>
    <string name="fragment_leave_comment_edit_text_hint">Your comments</string>
    <string name="fragment_leave_comment_leave">Leave</string>
    <string name="fragment_leave_comment_title">Leave comment</string>
    <string name="fragment_leave_comment_comment_count">%d</string>
    <string name="fragment_leave_comment_category_title">%s</string>
    <string name="fragment_leave_comment_news_title">%s</string>
    <string name="fragment_reply_comment_title">Reply to comments</string>
    <string name="fragment_reply_comment_comment_add_time">%s</string>
    <string name="fragment_reply_comment_comment_title">%s</string>
    <string name="fragment_reply_comment_user_name">%s</string>
    <string name="fragment_reply_comment_reply">Reply</string>
</resources>