<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">



    <group android:id="@+id/gHome"
        android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:title="@string/drawer_nav_home"
            android:icon="@drawable/ic_home"/>
    </group>

    <item
        android:id="@+id/myInterestsFragment"
        android:title="@string/drawer_nav_my_interests"
        android:icon="@drawable/ic_interests"/>

    <group android:id="@+id/gSaved"
        android:checkableBehavior="single">
        <item
            android:id="@+id/saveFragment"
            android:title="@string/drawer_nav_save"
            android:icon="@drawable/ic_save"/>
    </group>

    <group android:id="@+id/gSettings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/profileFragment"
            android:title="@string/drawer_nav_settings"
            android:icon="@drawable/ic_user" />
    </group>

    <item
        android:id="@+id/categoryFragment"
        android:title="@string/drawer_nav_category"
        android:icon="@drawable/ic_category"/>

    <group android:id="@+id/gPremium"
        android:checkableBehavior="single">
        <item
            android:id="@+id/premiumFragment"
            android:title="@string/drawer_nav_premium"
            android:icon="@drawable/ic_premium"/>
    </group>

    <item
        android:id="@+id/privacy_Policy"
        android:title="@string/drawer_nav_privacy_policy"
        android:icon="@drawable/ic_privacypolicy"/>

    <group android:id="@+id/gAbout"
        android:checkableBehavior="single">
        <item
            android:id="@+id/aboutFragment"
            android:title="@string/drawer_nav_about"
            android:icon="@drawable/ic_about" />
    </group>

</menu>