<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/image" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/categoryTitle"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/news_category_title_background"
        android:fontFamily="@font/museo_light"
        android:text="@string/news_category_title"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/materialCardView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newsTitle"
        android:layout_width="0dp"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_medium"
        android:text="@string/news_title"
        android:textColor="@color/charcoal_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/materialCardView4"
        app:layout_constraintTop_toBottomOf="@+id/categoryTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/materialCardView4">

        <TextView
            android:id="@+id/newsAddTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="6dp"
            android:fontFamily="@font/avenir_light"
            android:text="@string/news_add_time"
            android:textColor="@color/silver_chalice"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_hour"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/commentCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:drawablePadding="6dp"
            android:fontFamily="@font/avenir_light"
            android:text="@string/news_comment_count"
            android:textColor="@color/silver_chalice"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_comment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/newsAddTime"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/viewUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="6dp"
            android:fontFamily="@font/avenir_light"
            android:text="@string/news_view_users"
            android:textColor="@color/silver_chalice"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_eye"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>