<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_background"
            android:padding="24dp">

            <TextView
                android:id="@+id/categoryTitle"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/news_category_title_background"
                android:fontFamily="@font/museo_light"
                android:gravity="center"
                android:text="@string/news_category_title"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/newsTitle"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/newsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/avenir_medium"
                android:text="@string/banner_news_title"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/newsAddTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="6dp"
                    android:fontFamily="@font/avenir_light"
                    android:text="@string/banner_add_news_time"
                    android:textColor="@color/silver_chalice"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/ic_hour" />

                <TextView
                    android:id="@+id/commentCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:drawablePadding="6dp"
                    android:fontFamily="@font/avenir_light"
                    android:text="@string/banner_news_comment_count"
                    android:textColor="@color/silver_chalice"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/ic_comment" />

                <TextView
                    android:id="@+id/viewCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="6dp"
                    android:fontFamily="@font/avenir_light"
                    android:text="@string/banner_news_views_count"
                    android:textColor="@color/silver_chalice"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/ic_eye" />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>