<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg_0">

    <ImageView
        android:id="@+id/image"
        android:layout_width="300dp"
        android:layout_height="231dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/splash_image_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/splash_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/museosanscyrl"
        android:text="@string/splash_title_0"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <TextView
        android:id="@+id/splash_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/splash_sub_title_0"
        android:textAlignment="center"
        android:textColor="#EAEAEA"
        android:textSize="16sp"
        android:fontFamily="@font/avenir_light"
        app:layout_constraintEnd_toEndOf="@+id/splash_title"
        app:layout_constraintStart_toStartOf="@+id/splash_title"
        app:layout_constraintTop_toBottomOf="@+id/splash_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/museosanscyrl"
        android:text="@string/splash_continue"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="39dp"
        android:layout_marginEnd="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>