<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp"
    tools:context=".presentation.sign_in.SignInFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:outlineProvider="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/sign_in_sign_up_image" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_logo" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/museo_light"
        android:text="@string/sign_in_login_text"
        android:textColor="@color/mainTextColor"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/avenir_light"
        android:text="@string/sign_in_signin_to"
        android:textColor="@color/subTextColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/loginText"
        app:layout_constraintTop_toBottomOf="@+id/loginText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/subTitle">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="2dp"
            app:boxBackgroundColor="@color/transparent"
            app:boxStrokeColor="#161629"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:expandedHintEnabled="true"
            app:hintAnimationEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/passwordLayout"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconMinSize="15dp"
            app:startIconScaleType="fitStart"
            app:startIconTint="@color/ruby_red"
            tools:layout_editor_absoluteX="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_sign_in_user_name"
                android:inputType="text"
                android:paddingStart="25dp"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:boxBackgroundColor="@color/transparent"
            app:boxStrokeColor="#161629"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@id/forgotPassword"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconMinSize="15dp"
            app:startIconTint="@color/ruby_red"
            tools:layout_editor_absoluteX="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_sign_in_password"
                android:inputType="textPassword"
                android:paddingStart="25dp"
                android:textColor="#161629"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgotPassword"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/museo_light"
            android:paddingHorizontal="6dp"
            android:paddingVertical="8dp"
            android:text="@string/fragment_sign_in_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/subTextColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
            app:layout_constraintBottom_toBottomOf="@+id/passwordLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>





    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/museo_light"
        android:text="@string/fragment_sign_in_login"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:elevation="4dp"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/login"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toTopOf="@+id/login" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/fragment_sign_in_or_sing_in_with"
        android:textAlignment="center"
        android:fontFamily="@font/avenir_light"
        android:textColor="#bbbbbb"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/create_text">

        <ImageButton
            android:id="@+id/withFacebook"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="9dp"
            android:src="@drawable/ic_facebook"
            app:backgroundTint="@color/transparent" />

        <ImageButton
            android:id="@+id/withGoogle"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="9dp"
            android:src="@drawable/ic_google"
            app:backgroundTint="@color/transparent" />
    </LinearLayout>


    <TextView
        android:id="@+id/create_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/avenir_light"
        android:text="@string/fragment_sign_in_dont_have_account"
        android:textColor="@color/subTextColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/create"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_light"
        android:paddingHorizontal="6dp"
        android:paddingVertical="8dp"
        android:text="@string/fragment_sign_in_sign_up"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/mainTextColor"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/create_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/create_text" />


</androidx.constraintlayout.widget.ConstraintLayout>