<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView3"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic" />
    </com.google.android.material.card.MaterialCardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/materialCardView3">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_medium"
            android:text="@string/item_comments_user_name"
            android:textColor="@color/charcoal_gray"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/commentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/avenir_light"
            android:text="@string/item_comments_comment_title"
            android:textColor="@color/carbon_gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userName" />


        <TextView
            android:id="@+id/commendAddTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:drawablePadding="6dp"
            android:fontFamily="@font/avenir_light"
            android:text="@string/item_comments_comment_add_time"
            android:textColor="@color/silver_chalice"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_hour"
            app:drawableTint="#FFD000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commentTitle" />


        <Button
            android:id="@+id/reply"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/interests_following_button_background"
            android:fontFamily="@font/museo_light"
            android:padding="0dp"
            android:text="@string/item_comments_reply"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:backgroundTint="@null"
            app:layout_constraintBaseline_toBaselineOf="@id/commendAddTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commentTitle" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:dividerColor="@color/lavender_pino"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/commendAddTime" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>